--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
       <h1>Машуля, привет!</h1>
       <p>Любишь игры? Попробуй пройти все испытания!</p>
-      <a href="/index2.html"
+      <a href="https://alenaprovotorova.github.io/kvest/index2.html"
         ><button class="button button-main">Я ГОТОВА!</button></a
       >
     </div>
