--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
         чтобы продвинуться дальше!
       </p>
       <div class="task1">
-        <img class="task1__img" src="/kvest/img/transperent-bg.png" alt="" />
+        <img class="task1__img" src="/img/transperent-bg.png" alt="" />
       </div>
       <form action="">
         <input
