--- a/index4.html
+++ b/index4.html
@@ -21,7 +21,7 @@
         отгадай загадку:
       </p>
       <div class="task1">
-        <img class="task1__img" src="/img/почтовый-ящик.png" alt="" />
+        <img class="task1__img" src="img/box.png" alt="" />
       </div>
 
       <form action="">
