--- a/index7.html
+++ b/index7.html
@@ -20,7 +20,7 @@
         Эти чудесные булочки ждут, когда будут доставлены получателю!
       </p>
       <div class="task1">
-        <img class="task1__img" src="/img/cinna.jpg" alt="" />
+        <img class="task1__img" src="img/cinna.jpg" alt="" />
       </div>
 
       <button class="button-check button-check7">ГОТОВО!</button>
