--- a/index5.html
+++ b/index5.html
@@ -20,7 +20,7 @@
         Бросаем все свои делишки и едем! А вот куда - ты узнаешь в машине)
       </p>
       <div class="task1">
-        <img class="task1__img" src="/img/megan.jpeg" alt="" />
+        <img class="task1__img" src="img/megan.jpeg" alt="" />
       </div>
 
       <button class="button-check button-check5">ДАЛЕЕ</button>
