--- a/index7.html
+++ b/index7.html
@@ -22,10 +22,11 @@
       <div class="task1">
         <img class="task1__img" src="img/cinna.jpg" alt="" />
       </div>
-
-      <button class="button-check button-check7">ГОТОВО!</button>
+      <a href="index8.html">
+        <button class="button-check button-check7">ГОТОВО!</button></a
+      >
     </div>
 
-    <script src="/scriptSeven.js"></script>
+    <script src=""></script>
   </body>
 </html>
